SubVersion: $Id$

Log:

- 03/10/2007, version 1.1.1: roms
	- renamed link_slv into link_usb
	- added NSpire support
	- improved built-in DUSB & DBUS packet decompilers
	- fixed bug #1731776 (kevin)
	
- 13/09/2007, version 1.1.0: roms
	- fixed some checks (return value changed in rev. 3719 
		but not all paths updated)

- 02/09/2007, version 1.0.9: roms & kevin
	- fixed win32_check_libusb() (roms)
	- check WIN64 platform at runtime in ioports.c (need to know whether we
	  are running a 32-bit app under Win32 or Win64). (roms, kevin)
	- driver installation for MinGW (make install): install into prefix,
	  output message explaining how to fully install them (kevin)
	- added support for slv_check (needed for TiEmu) on libusb-win32 (kevin)
	- fixed value of ETIMEDOUT under Win32 (kevin)

- 24/08/2007, version 1.0.8: roms
	- removed TiglUsb driver support due to license issues. 
		Replaced by libusb-win32 GPL'ed driver.
	- some typo and return value changes for consistency with 
	Linux detect.c.

- 06/08/2007, version 1.0.7: roms
	- removed PortTalk I/O driver due to license issues. Replaced by GPL'ed
		MPlayer's DhaHelper driver.
	- fixed build with upcoming glibc 2.7 (kevin)

- 19/05/2007, version 1.0.6: roms
	- changed PID_TI84P to 0xE003 and added PID_TI84P_SE as 0xE008.
	This has been done in 1.0.2 but not propagated under Linux.
	- fixed bug #1707555: grammar correction in error message.
	
- 02/04/2007, version 1.0.5: roms
	- support NetBSD serial port device names (Jukka Salmi)
	- cosmetic change in the name of the TiEmu virtual link
	- fixed bug #1676861: VTi link failed due to library name (major)
	- fixed missing 'break's in error management code
	- better mounting check of /proc/bus/usb

- 23/02/2007, version 1.0.4: roms
	- enabled i18n

- 19/10/2006, version 1.0.3: roms
	- fixed build when linux/ticables.h is not available (kevin)
	- 64-bit driver is v3.5, 32-bit one is v3.6: request v3.5
	- fixed pause in Linux support: usleep uses us rather than ms.
