@@ -522,6 +522,14 @@ static int slv_close(CableHandle *h)
 
 static int slv_reset(CableHandle *h)
 {
+#if !defined(__BSD__)
+# ifdef SLV_RESET
+    TRYC(tigl_reset(uHdl));
+# else
+	TRYC(slv_close(h));
+	TRYC(slv_open(h));
+# endif
+#endif
 
     return 0;
 }
